--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Course Web Application</title>
+    <title>Pluralsight Redux</title>
   </head>
 
   <body>
